remove unused files. change color themes

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+Sungjin:
+  name: 위성진
+  title: Team member
+  url: https://github.com/MintyProtein
+  image_url: https://avatars.githubusercontent.com/u/99706010?v=4
