--- a/docs/authors.yml
+++ b/docs/authors.yml
@@ -3,3 +3,8 @@ Sungjin:
   title: Team member
   url: https://github.com/MintyProtein
   image_url: https://avatars.githubusercontent.com/u/99706010?v=4
+Bang:
+  name: 방승호
+  title: Team member
+  url: https://github.com/inucom
+  image_url: https://avatars.githubusercontent.com/u/113766889?v=4
